// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioButton /> matches snapshot with \`size = lg\` 1`] = `
<div>
  <button
    aria-selected="false"
    class="css-7o3f9q-radioButton-radioButton"
    id="radio-0"
  >
    Test label
  </button>
</div>
`;

exports[`<RadioButton /> matches snapshot with \`size = md\` 1`] = `
<div>
  <button
    aria-selected="false"
    class="my-radio-class css-h2n421-radioButton-radioButton"
    id="my-radio-id"
  >
    Test label
  </button>
</div>
`;
